Add js File to main page

--- a/index.html
+++ b/index.html
@@ -71,5 +71,7 @@
         <img src="./assets/images/logo.png" alt="amazon logo" width="200px" />
       </div>
     </footer>
+
+    <script src="D5.js"></script>
   </body>
 </html>
